Fix broken alignment in visuals tab when image name has too big length (0019899)

--- a/src/style.scss
+++ b/src/style.scss
@@ -308,6 +308,7 @@ h4.list-header {
 .default-height{
     height: 490px;
     position: relative;
+    overflow-y: auto;
 }
 
 .feedback-container {
